collectors collect replaced with tolist